WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122520
WebProcess crash on SAP WebCycle web app
https://bugs.webkit.org/show_bug.cgi?id=122520
Summary
WebProcess crash on SAP WebCycle web app
Anders Carlsson
Reported
2013-10-08 13:08:23 PDT
WebProcess crash on SAP WebCycle web app
Attachments
Patch
(14.01 KB, patch)
2013-10-08 13:37 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-10-08 13:37:56 PDT
Created
attachment 213714
[details]
Patch
Darin Adler
Comment 2
2013-10-08 13:56:46 PDT
Comment on
attachment 213714
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=213714&action=review
> Source/WebKit2/PluginProcess/mac/PluginProcessMac.mm:509 > + NSEvent *event = [NSEvent otherEventWithType:NSApplicationDefined > + location:NSMakePoint(0, 0) > + modifierFlags:0 > + timestamp:0.0 > + windowNumber:0 > + context:nil > + subtype: 0 > + data1:0 > + data2:0];
Would be nice to format this in a less high-maintenance way without the lined up colons. Also, subtype has a space after it.
> Source/WebKit2/WebProcess/mac/WebProcessMac.mm:224 > + ASSERT([NSApp isRunning]); > + [NSApp stop:nil]; > + NSEvent *event = [NSEvent otherEventWithType:NSApplicationDefined > + location:NSMakePoint(0, 0) > + modifierFlags:0 > + timestamp:0.0 > + windowNumber:0 > + context:nil > + subtype: 0 > + data1:0 > + data2:0]; > + [NSApp postEvent:event atStart:true];
Should share this code with PluginProcess::stopRunLoop.
Anders Carlsson
Comment 3
2013-10-08 14:04:48 PDT
Committed
r157137
: <
http://trac.webkit.org/changeset/157137
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug