Source/WebKit2/Shared/ChildProcess.cpp
@@ -149,11 +149,16 @@ void ChildProcess::terminationTimerFired()
     terminate();
 }
 
+void ChildProcess::stopRunLoop()
+{
+    RunLoop::main()->stop();
+}
+
 void ChildProcess::terminate()
 {
     m_connection->invalidate();
 
-    RunLoop::main()->stop();
+    stopRunLoop();
 }
 
 #if !PLATFORM(MAC)
