Source/WebKit2/Shared/mac/ChildProcessMac.mm
@@ -252,4 +252,13 @@ void ChildProcess::initializeSandbox(const ChildProcessInitializationParameters&
     }
 }
 
+void ChildProcess::stopNSAppRunLoop()
+{
+    ASSERT([NSApp isRunning]);
+    [NSApp stop:nil];
+
+    NSEvent *event = [NSEvent otherEventWithType:NSApplicationDefined location:NSMakePoint(0, 0) modifierFlags:0 timestamp:0.0 windowNumber:0 context:nil subtype:0 data1:0 data2:0];
+    [NSApp postEvent:event atStart:true];
 }
+
+} // namespace WebKit
